--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,21 @@
         let z = document.createElement('article');
         let w = document.createElement('article');
         let v = document.createElement('article');
-        x.innerHTML = 'Boooom';
-        z.innerHTML = 'Boom';
-        w.innerHTML = 'Booooooooooom';
-        v.innerHTML = 'Booooooom';
-        y.innerHTML = 'Boooooooom';
+        x.classList.add('message');
+        y.classList.add('message');
+        z.classList.add('message');
+        w.classList.add('message');
+        v.classList.add('message');
         document.body.appendChild(x);
         document.body.appendChild(v);
         document.body.appendChild(w);
         document.body.appendChild(y);
         document.body.appendChild(z);
+        x.append('Boooooom!!!');
+        y.append('Boooooom!!!');
+        z.append('Boooooom!!!');
+        w.append('Boooooom!!!');
+        v.append('Boooooom!!!');
       }
     </script>
   </body>
