--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
         z.classList.add('message');
         w.classList.add('message');
         v.classList.add('message');
-        document.body.appendChild(x);
-        document.body.appendChild(v);
-        document.body.appendChild(w);
-        document.body.appendChild(y);
-        document.body.appendChild(z);
+        document.body.after(x);
+        document.body.after(v)
+        document.body.after(w);
+        document.body.after(y);
+        document.body.after(z);
         x.append('Boooooom!!!');
         y.append('Boooooom!!!');
         z.append('Boooooom!!!');
