--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <script>
       function textChange() {
         for (let index = 0; index < 5; index++) {
-          let x = document.createElement('article');;
+          let x = document.createElement('article');
           x.classList.add('message');
           document.body.after(x);
           x.append('Boooooom!!!');
