--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body>
+  <body onclick='textChange()'>
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
-      <button onclick='textChange()' class="button">Boom?</button>
+      <button class="button">Boom?</button>
     </div>
     <script>
       function textChange() {
